# salome

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
libs/salome/: pyproject.toml
libs/salome/src/salome/: config.py
libs/salome/src/salome/agents/: __init__.py  prompts.py
libs/salome/src/salome/agents/ask/: agent.py
libs/salome/src/salome/agents/flyer/: agent.py
libs/salome/src/salome/agents/flyer/prompts/: user.md
libs/salome/src/salome/agents/laziness/: __init__.py  agent.py
libs/salome/src/salome/agents/laziness/prompts/: user.md
libs/salome/src/salome/agents/prompts/: __init__.py  salome-role.md
libs/salome/src/salome/agents/recipe/: agent.py  tools.py
libs/salome/src/salome/agents/recipe/prompts/: user.md
libs/salome/src/salome/bot/: __init__.py  bot.py
libs/salome/src/salome/bot/handlers/: __init__.py  ask.py  common.py  minecraft.py
libs/salome/src/salome/bot/handlers/ask/: __init__.py  handler.py
libs/salome/src/salome/bot/handlers/command/: __init__.py
libs/salome/src/salome/bot/handlers/command/ask/: __init__.py  handler.py
libs/salome/src/salome/bot/handlers/command/minecraft/: __init__.py  handler.py
libs/salome/src/salome/bot/handlers/minecraft/: __init__.py  handler.py
libs/salome/src/salome/bot/handlers/recipe/: __init__.py  handler.py  recipe.py
libs/salome/src/salome/bot/handlers/schedule/: __init__.py  common.py
libs/salome/src/salome/utils/: __init__.py  discord.py
libs/salome/src/salome/utils/aws/: __init__.py  bedrock.py  dynamodb.py  ec2.py  s3vectors.py  sns.py  ssm.py
(+50 files in other folders)
