[project]
name = "salome"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.30",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.1",
    "pynacl>=1.6.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "boto3-stubs[bedrock-runtime,sns]>=1.42.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salome"]

